--- a/netlify.toml
+++ b/netlify.toml
@@ -2,9 +2,9 @@
 publish = "public"
 command = "make production-build"
 
-[build.environment]
+[context.production.environment]
 HUGO_VERSION = "0.75.1"
-NETLIFY_USE_YARN = true 
+HUGO_ENV = "production"
 
 [context.deploy-preview]
 command = "make preview-build"
