--- a/config.toml
+++ b/config.toml
@@ -53,10 +53,10 @@ name = "Open Sans"
 sizes = [100, 200, 300, 400, 500, 600, 700]
 type = "heading_font"
 
-# [[menu.main]]
-# name = "Download"
-# url = "#"
-# weight = 1
+[[menu.main]]
+name = "Download"
+url = "/download"
+weight = 1
 
 # [[menu.main]]
 # name = "News"
