--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@fortawesome/fontawesome-free": "^5.14.0",
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "ua-parser-js": "^0.7.25"
   }
 }
