add contribute link to top nav (#504)
Signed-off-by: Celeste Horgan <celeste@cncf.io>

--- a/config.toml
+++ b/config.toml
@@ -87,3 +87,8 @@ name = "Documentation"
 url = "/docs"
 weight = 1 
 parent = "learn"
+
+[[menu.main]]
+name = "Contribute"
+url = "/docs/contribute"
+weight = 5
