[WIP] testing small changes in deploy DO NOT MERGE (#530)
* [WIP] testing small changes in deploy DO NOT MERGE

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* some nav bar changes

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* correct config for CNAME in links

Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://o3deorg.netlify.app"
+baseURL = "https://docs.o3de.org"
 title = "Open 3D Engine"
 disableKinds = ["taxonomy", "taxonomyTerm"]
 copyright = "O3DE Authors | Documentation Distributed under CC-BY 4.0"
@@ -77,16 +77,10 @@ identifier = "community"
 # parent = "community"
 
 [[menu.main]]
-name = "Learn"
-url = "#"
-weight = 4
-identifier = "learn"
-
-[[menu.main]]
 name = "Documentation"
 url = "/docs"
-weight = 1 
-parent = "learn"
+weight = 4
+identifier = "docs"
 
 [[menu.main]]
 name = "Contribute"
