--- a/config.toml
+++ b/config.toml
@@ -11,6 +11,10 @@ style = "paraiso-dark"
 [markup.goldmark.renderer]
 unsafe = true
 
+[outputs]
+  home = ["HTML", "RSS", "JSON"]
+  page = ["HTML", "RSS"]
+
 [params]
 font_awesome_version = "5.12.0"
 description = "Open 3D Engine (O3DE) is an Apache 2.0-licensed multi-platform 3D engine that enables developers and content creators to build AAA games, cinema-quality 3D worlds, and high-fidelity simulations <b>without any fees or commercial obligations</b>.<br><br><b>Try the Developer Preview today!</b>"
