More general cleanup for 7/6 release (#571)
* initial fixes to links

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* updates to front page text

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* fixed html error

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* minor wordsmithing

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* changed DOCUMENTATION to LEARN as per UX discussions

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* initial change from Welcome Guide to Get Started Guide

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* fixed a typo

Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/config.toml
+++ b/config.toml
@@ -84,7 +84,7 @@ identifier = "community"
 # parent = "community"
 
 [[menu.main]]
-name = "DOCUMENTATION"
+name = "LEARN"
 url = "/docs"
 weight = 4
 identifier = "docs"
