--- a/config.toml
+++ b/config.toml
@@ -41,7 +41,7 @@ name = "O3DE Public Calendar"
 url = "https://lists.o3de.org/g/o3de-calendar/calendar"
 icon = "fab fa-github"
 
-[[params.social]
+[[params.social]]
 name = "O3DE Twitter"
 url = "https://twitter.com/o3dengine"
 icon = "fab fa-twitter"
