Draft telemetry page (#612)
* added draft telemetry page

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* some prse cleanup

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* quick edit pass

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* added twitter link

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* fixed typo

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* fixes from edit pass

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* updated twitter link

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* edit from legal incorporated

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* added privacy policy link

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* fixed config.toml

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* fixed json sample issue

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* final legal wording cleanup

Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/config.toml
+++ b/config.toml
@@ -41,6 +41,11 @@ name = "O3DE Public Calendar"
 url = "https://lists.o3de.org/g/o3de-calendar/calendar"
 icon = "fab fa-github"
 
+[[params.social]]
+name = "O3DE Twitter"
+url = "https://twitter.com/o3dengine"
+icon = "fab fa-twitter"
+
 [[params.fonts]]
 name = "Open Sans"
 sizes = [300, 400, 600, 700]
