Fix social icons in Community landing page, remove test blog articles, programmatically display blog article image in Community page.
Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

--- a/config.toml
+++ b/config.toml
@@ -39,7 +39,7 @@ icon = "fab fa-discord"
 [[params.social]]
 name = "O3DE Public Calendar"
 url = "https://lists.o3de.org/g/o3de-calendar/calendar"
-icon = "fab fa-github"
+icon = "fas fa-calendar-day"
 
 [[params.social]]
 name = "O3DE Twitter"
