Added non-expiring discord link
Signed-off-by: Mike Cronin <mikecro@amazon.com>

--- a/config.toml
+++ b/config.toml
@@ -33,7 +33,7 @@ icon = "fab fa-github"
 
 [[params.social]]
 name = "O3DE Discord Chat"
-url = "https://discord.gg/neVKVbs6"
+url = "https://discord.gg/xNb2q4SJKJ"
 icon = "fab fa-discord"
 
 [[params.social]]
