Rewrite robots in netlify.toml instead of Makefile
Signed-off-by: Jonathan Capes <j.capes@gmail.com>

--- a/netlify.toml
+++ b/netlify.toml
@@ -7,6 +7,8 @@ HUGO_VERSION = "0.75.1"
 
 [context.deploy-preview]
 command = "make preview-build"
+command = "echo 'User-agent: *\nDisallow: /' > robots.txt"
 
 [context.branch-deploy]
 command = "make preview-build"
+command = "echo 'User-agent: *\nDisallow: /' > robots.txt"
