Fix build error.
Signed-off-by: Jonathan Capes <j.capes@gmail.com>

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,9 +6,7 @@ command = "make production-build"
 HUGO_VERSION = "0.75.1"
 
 [context.deploy-preview]
-command = "make preview-build"
-command = "echo 'User-agent: *\nDisallow: /' > robots.txt"
+command = "make preview-build && echo 'User-agent: *\nDisallow: /' > robots.txt"
 
 [context.branch-deploy]
-command = "make preview-build"
-command = "echo 'User-agent: *\nDisallow: /' > robots.txt"
+command = "make preview-build && echo 'User-agent: *\nDisallow: /' > robots.txt"
