--- a/config.toml
+++ b/config.toml
@@ -18,7 +18,7 @@ unsafe = true
 
 [params]
 font_awesome_version = "5.12.0"
-description = "Open 3D Engine (O3DE) is a modular, open source, cross-platform 3D engine built to power anything from AAA games, cinema-quality 3D worlds, and high-fidelity simulations without any fees and commercial obligations. Apache 2.0-licensed, and managed by The Linux Foundation."
+description = "Open 3D Engine (O3DE) is a modular, open source, cross-platform 3D engine built to power anything from AAA games to cinema-quality 3D worlds to high-fidelity simulations. No fees or commercial obligations. Apache 2.0-licensed. Managed by The Linux Foundation."
 favicon = "favicon.ico"
 repositoryUrl = "https://github.com/o3de/o3de.org"
 contentDir = "/content/"
