"O3DE Learn" now links to o3de.org/docs
Signed-off-by: Chanelle Mosquera <75444793+chanmosq@users.noreply.github.com>

--- a/config.toml
+++ b/config.toml
@@ -22,6 +22,7 @@ description = "Open 3D Engine (O3DE) is a modular, open source, cross-platform 3
 favicon = "favicon.ico"
 repositoryUrl = "https://github.com/o3de/o3de.org"
 contentDir = "/content/"
+docsDir = "/docs/"
 sourceRepo = "https://github.com/o3de/o3de"
 
 [params.logos]
